            edit() now chooses the shortest way to describe the function
            Fixed bug when RegExp.match/test called on non-strings
            Added Global isFinite
            Add missing ArrayBufferView.filter
            Added Array.find and findIndex (also for ArrayBufferViews)
            Fix unreliable ArrayBufferView.indexOf (#1468)

     1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
            nRF5x: Make FlashWrite cope with flash writes > 4k
            Increase max size of native strings on platforms that support it - 16 bit to 32 bit (#1432)
            Fix stack size detection on Linux (fix #1427)
            Fix strncat/cpy bounding issues (fix #1425)
            Promises now ignore a second resolve/reject (fix #1433)
            Fix stack overflow if void void void... is repeated many times (fix #1434)
            Fix font rendering issue caused by signed bit field handling by GCC on non-x86 platforms (fix #1436)
            Added E.reboot() to allow hard reboots from software (fix #1429)
            Added 'Graphics.getInstance()' for more platform independent graphics
            Added VT100 'erase in Display' to Terminal
            In REPL, use x.toString() for objects if we know their name and it is available
            Pixl.js add BLE aerial test to self-test, now also start immediately on BTN4 at boot

     1v98 : Allow Crypto SHA1 without SHA256/512 (for ESP8266 where flash is scarce)
            Add better docs for the form of Wifi callback functions
            Modify ESP8266/ESP32 callbacks to match the node.js style used elsewhere
            nRF52: fix pin.toggle() on software-negated pins
            Pixl.js: Reorder pins so 0..13 are also D0..13 for better Arduino compatibility
            Fix dump() when used with code written using E.setBootCode(..), (fix #1398)