@@ -26,3 +26,5 @@ JsVar *jswrap_string_slice(JsVar *parent, JsVarInt pStart, JsVar *vEnd);
 JsVar *jswrap_string_split(JsVar *parent, JsVar *split);
 JsVar *jswrap_string_toUpperLowerCase(JsVar *parent, bool upper);
 JsVar *jswrap_string_trim(JsVar *parent);
+bool jswrap_string_startsWith(JsVar *parent, JsVar *search, int position);
+bool jswrap_string_endsWith(JsVar *parent, JsVar *search, JsVar *length);
